gcp-platform-engineering-portfolio/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-demo
  labels:
    owner: platform-team
    environment: dev
