gcp-platform-engineering-portfolio/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-sample-api
  namespace: platform-demo
  labels:
    app: platform-sample-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-sample-api
  template:
    metadata:
      labels:
        app: platform-sample-api
    spec:
      serviceAccountName: platform-sample-api
      containers:
        - name: api
          image: us-central1-docker.pkg.dev/example-project/platform/platform-sample-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
