gcp-platform-engineering-portfolio/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-sample-api
  namespace: platform-demo
  labels:
    app: platform-sample-api
  annotations:
    cloud.google.com/backend-config: '{"default": "platform-sample-api"}'
spec:
  type: ClusterIP
  selector:
    app: platform-sample-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
